# four-am

./: Cargo.toml  build.rs  four-am.js  four-am.wasm  index.html
.github/workflows/: rust.yml
data/: monsters.json
src/: ai.rs  camera.rs  color.rs  component.rs  error.rs  font.rs  fov.rs  gamestate.rs  geom.rs  glyph.rs  grid.rs  main.rs  map.rs  message.rs  tileset.rs  turn_system.rs  ui.rs
src/client/: camera.rs  client.rs  events.rs  glyph.rs  grid.rs  mod.rs  network_client.rs  tileset.rs  ui.rs
src/common/fsm/: mod.rs  state.rs  state_machine.rs  state_transition.rs
src/frontend/: camera.rs  client.rs  font.rs  glyph.rs  mod.rs  tileset.rs  ui.rs
src/frontend/screen/: grid.rs  mod.rs  terminal.rs
src/resources/: mod.rs
src/server/: ai.rs  fov.rs  gamestate.rs  map.rs  mod.rs  serializers.rs  server.rs  turn_system.rs
src/server/map_builders/: basic_builders.rs  drunkard.rs  factories.rs  mod.rs  shop_builder.rs
src/server/systems/: ai.rs  ai_system.rs  index_system.rs  indexer.rs  mod.rs  turn_system.rs  vision_system.rs
static/: index.html
static/data/: entities.json
