[package]
name = "four-am"
version = "0.1.0"
authors = ["Kriston Costa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
walkdir = "2.2.9"

[dependencies]
rusttype = "0.8.2"
instant = { version = "0.1.2", features = ["stdweb"]}
image = "0.23.0-preview.0"
pathfinding = "2.0.3"
rand = { version = "0.6.5", features = ["stdweb"] }
euclid = "0.20.7"
specs-derive = "0.4.0"
serde= { version = "^1.0.44", features = ["derive"] }
serde_json = "^1.0.44"
lazy_static = "1.4.0"
regex = "1.3.1"

[dependencies.specs]
version = "0.15.1"
default-features = false

[dependencies.legion]
version = "0.2.1"
features = ['events']
default-features = false

[dependencies.quicksilver]
git = "https://github.com/ryanisaacg/quicksilver"
branch = "master"
features = ["saving", "stdweb"]

[patch.crates-io]
winit = { git = 'https://github.com/rust-windowing/winit.git', branch = 'master', features = ['stdweb'] }